<resources>
    <string name="app_name">Resumify</string>
    <string name="select_template">Select Template</string>
    <string name="done">Done</string>
    <string name="save">Save</string>

    <!-- Edit Text hint -->
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="job">Job</string>
    <string name="objective">Objective</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="btn_add">ADD</string>
    <string name="language">Language</string>
    <string name="hobby">Hobby</string>

    <!-- Image button description -->
    <string name="more_option_desc">More Options</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course">Course</string>
    <string name="institute">Institute</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="edcuation">Edcuation</string>
    <string name="experience">Experience</string>
    <string name="job_title">Job Title</string>
    <string name="company_name">Company Name</string>
    <string name="job_description">Job Description</string>
    <string name="skill">Skill</string>
    <string name="skill_level">Skill Level</string>
    <string name="skill_level_eg">Skill Level (96%)</string>
    <string name="reference">Reference</string>
    <string name="reference_name">Reference Name</string>
    <string name="designation">Designation</string>
    <string name="phone">Phone</string>
    <string name="project">Project</string>
    <string name="project_name">Project Name</string>
    <string name="your_role">Your Role</string>
    <string name="project_description">Project Description</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="change">Change</string>
    <string name="generate">Generate</string>
    <string name="share">Share</string>
</resources>
