<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingStart="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/project"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextProjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/editTextRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/your_role"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/editTextProjectDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="top|start"
        android:hint="@string/project_description"
        android:inputType="textMultiLine"
        android:minLines="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cancel"
            android:textColor="@color/colorGrey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/add"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>