<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingStart="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/experience"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextJobTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/job_title"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/editTextCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_name"
        android:inputType="textCapWords" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <EditText
            android:id="@+id/editTextStartYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:hint="Start Year"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/editTextEndYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="End Year"
            android:inputType="textCapWords" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextJobDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="top|start"
        android:hint="@string/job_description"
        android:inputType="textMultiLine"
        android:minLines="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cancel"
            android:textColor="@color/colorGrey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/add"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>